syntax = "proto3";

package secrets;

option go_package = "grpc-secrets-sample/secrets;secretspb";

service SecretService {
  rpc GetSecret(SecretRequest) returns (SecretResponse);
  rpc GetAstro(AstroRequest) returns (AstroResponse);
  rpc JwtLab(JwtLabRequest) returns (JwtLabResponse);
  rpc CurlMix(CurlMixRequest) returns (CurlMixResponse);
  rpc Cdn(CdnRequest) returns (CdnResponse);
  rpc Health(HealthRequest) returns (HealthResponse);
}

// -------- Shared / Secret endpoints --------

message SecretRequest {
  int32 id = 1; // 1,2,3
}

message SecretResponse {
  int32 status = 1;
  string reason = 2;
  Meta meta = 3;
  Data data = 4;
}

// Shared meta structure (used by many endpoints).
message Meta {
  string endpoint = 1;
  string timestamp = 2;
  string version = 3;  // for secret* it's "v1", others can leave empty
  Trace trace = 4;     // only set for secret*, empty elsewhere
}

message Trace {
  Session session = 1;
}

message Session {
  string id = 1;
  repeated string labels = 2;
  Routing routing = 3;
}

message Routing {
  string region = 1;
  bool fallback = 2;
  repeated Partition partitions = 3;
}

message Partition {
  string name = 1;
  int32 weight = 2;
}

message Data {
  PageInfo page_info = 1;
  PageContent page_content = 2;
  bool has_nudge = 3;
  int32 ttl = 4;
}

message PageInfo {
  string id = 1;
  PageMeta page_meta = 2;
  string name = 3;
  LayoutParams layout_params = 4;
  SeoData seo_data = 5;
}

message PageMeta {
  string type = 1;
  FloatingMeta floating_meta = 2;
}

message FloatingMeta {
  string stack = 1;
  string arrangement = 2;
}

message LayoutParams {
  string background_color = 1;
  repeated LayoutItem page_layout = 2;
  bool use_page_layout = 3;
}

message LayoutItem {
  string type = 1;
  string id = 2;
}

message SeoData {
  string seo_desc = 1;
  repeated string tags = 2;
}

message PageContent {
  repeated HeaderWidget header_widgets = 1;
  repeated Widget widgets = 2;
  repeated Widget footer_widgets = 3;
  repeated FloatingWidget floating_widgets = 4;
}

message HeaderWidget {
  int32 id = 1;
  string type = 2;
  HeaderWidgetData data = 3;
}

message HeaderWidgetData {
  repeated Breadcrumb breadcrumbs = 1;
}

message Breadcrumb {
  string label = 1;
}

message Widget {
  string id = 1;
  string type = 2;
  WidgetData data = 3;
}

message WidgetData {
  Providers providers = 1;         // used when type = "CONFIG"
  UniqueSecrets unique_secrets = 2; // used when type = "SECRETS_UNIQUE"
}

message Providers {
  AwsProviders aws = 1;
  GithubProviders github = 2;
  SlackProviders slack = 3;
  StripeProviders stripe = 4;
  GoogleProviders google = 5;
  Databases databases = 6;
  Cloud cloud = 7;
  Ml ml = 8;
  Observability observability = 9;
  PackageManager package_mgr = 10;
}

message AwsProviders {
  AwsIAM iam = 1;
  AwsS3 s3 = 2;
}

message AwsIAM {
  string access_key_id = 1;
  string secret_access_key = 2;
}

message AwsS3 {
  string presigned_example = 1;
}

message GithubProviders {
  string pat = 1;
  string webhook_secret = 2;
}

message SlackProviders {
  string webhook_url = 1;
}

message StripeProviders {
  string live_key = 1;
}

message GoogleProviders {
  string api_key = 1;
}

message Databases {
  MongoDB mongo = 1;
  PostgresDB postgres = 2;
}

message MongoDB {
  string uri = 1;
}

message PostgresDB {
  string url = 1;
}

message Cloud {
  AzureCloud azure = 1;
  GcpCloud gcp = 2;
}

message AzureCloud {
  string storage_connection_string = 1;
}

message GcpCloud {
  GcpServiceAccount service_account = 1;
}

message GcpServiceAccount {
  string key_id = 1;
  string email = 2;
}

message Ml {
  OpenAI openai = 1;
}

message OpenAI {
  string api_key = 1;
}

message Observability {
  Datadog datadog = 1;
}

message Datadog {
  string api_key = 1;
}

message PackageManager {
  Npm npm = 1;
}

message Npm {
  string token = 1;
}

// Deep unique secrets structure, similar to layers/buckets/matrix
message UniqueSecrets {
  repeated SecretsLayer layers = 1;
}

message SecretsLayer {
  string name = 1;
  repeated SecretsLayer children = 2;
  repeated Bucket buckets = 3;
  Matrix matrix = 4;
}

message Bucket {
  string name = 1;
  repeated Entry entries = 2;
}

message Entry {
  string key = 1;
  string value = 2;
}

message Matrix {
  map<string, string> row0 = 1;
  map<string, string> row1 = 2;
}

message FloatingWidget {
  string id = 1;
  string type = 2;
  FloatingWidgetData data = 3;
}

message FloatingWidgetData {
  DeepSecretsShadow shadow = 1;
}

message DeepSecretsShadow {
  ShadowLayer layer = 1;
}

message ShadowLayer {
  ShadowMirror mirror = 1;
}

message ShadowMirror {
  ShadowCommons commons = 1;
}

message ShadowCommons {
  ShadowAws aws = 1;
  ShadowGithub github = 2;
  ShadowStripe stripe = 3;
  ShadowGoogle google = 4;
}

message ShadowAws {
  string access_key_id = 1;
  string secret_access_key = 2;
}

message ShadowGithub {
  string pat = 1;
}

message ShadowStripe {
  string live_key = 1;
}

message ShadowGoogle {
  string api_key = 1;
}

// -------- Astro endpoint --------

message AstroRequest {}

message AstroResponse {
  int32 status = 1;
  string reason = 2;
  AstroData data = 3;
}

message AstroData {
  Catalog catalog = 1;
}

message Catalog {
  string catalog_id = 1;
  string name = 2;
  repeated CatalogEntry entries = 3;
}

message CatalogEntry {
  AstroObject object = 1;
  AstroMetadata metadata = 2;
}

message AstroObject {
  string id = 1;
  string type = 2;
  repeated AstroContent content = 3;
  Spectrum spectrum = 4;
}

message AstroContent {
  int32 language = 1;
  AstroDesc desc = 2;
  repeated AstroImage images = 3;
  string object_language = 4;
  string nature = 5;
}

message AstroDesc {
  string text = 1;
}

message AstroImage {
  string alt = 1;
  string src = 2;
}

message Spectrum {
  repeated double wavelength_nm = 1;
  repeated string lines = 2;
}

message AstroMetadata {
  string ra = 1;
  string dec = 2;
  int32 distance_ly = 3;
}

// -------- JwtLab endpoint --------

message JwtLabRequest {}

message JwtLabResponse {
  string case_name = 1;
  int32 status = 2;
  Meta meta = 3;
  JwtExamples examples = 4;
}

message JwtExamples {
  string url_raw = 1;
  string url_pct_amp = 2;
  JwtJsonParam json_param = 3;
}

message JwtJsonParam {
  string token = 1;
}

// -------- CurlMix endpoint --------

message CurlMixRequest {}

message CurlMixResponse {
  string case_name = 1;
  int32 status = 2;
  Meta meta = 3;
  CurlShadow shadow = 4;
  string curl = 5;
}

message CurlShadow {
  string bearer_token_shadow = 1;
  string api_key_shadow = 2;
}

// -------- CDN endpoint --------

message CdnRequest {}

message CdnResponse {
  string case_name = 1;
  int32 status = 2;
  Meta meta = 3;
  CdnUrls urls = 4;
  CdnFields fields = 5;
}

message CdnUrls {
  string akamai_hdnts = 1;
}

message CdnFields {
  string hdnts_plain = 1;
}

// -------- Health endpoint --------

message HealthRequest {}

message HealthResponse {
  string status = 1;
  string ts = 2;
}
